[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data_wrangling"
version = "0.1.2"
authors = [
  { name="Janith Cyapa", email="janithcyapa@gmail.com" },
]
description = "Data wrangling library for Statistical Learning assignment"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "plotly",
    "scipy",
    "scikit-learn",
    "pydantic>=2.0.0"
]

[tool.setuptools]
packages = ["data_wrangling"]

[tool.bumpver]
current_version = "0.1.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = false
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"data_wrangling/__init__.py" = [
    '__version__ = "{version}"',
]
